_notes/errbyfile/O00000000000O0.java.txt
ru\metaculture\protection\O00000000000O0.java:75: error: incompatible 
types: bad type in conditional expression
         return O000000000 ? O00000000("computersystem", "Name") : O00000000("hostname");
                                                                            ^
    boolean cannot be converted to String

ru\metaculture\protection\O00000000000O0.java:86: error: incompatible 
types: Object cannot be converted to String
         for (String var5 : var2) {
                            ^

  ru\metaculture\protection\O00000000000O0.java:75: error: incompatible 
types: bad type in conditional expression
           return O000000000 ? O00000000("computersystem", "Name") : O00000000("hostname");
                                                                              ^
      boolean cannot be converted to String

  ru\metaculture\protection\O00000000000O0.java:86: error: incompatible 
types: Object cannot be converted to String
           for (String var5 : var2) {
                              ^
